--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@mui-treasury/components": "^1.10.1",
     "@testing-library/jest-dom": "^5.13.0",
@@ -14,6 +15,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-google-font-loader": "^1.1.0",
     "react-icons": "^4.2.0",
     "react-material-ui-carousel": "^2.2.6",
     "react-router-dom": "^5.2.0",
