--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sdm",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://0.0.0.0:8004",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -16,6 +17,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-google-font-loader": "^1.1.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
     "react-material-ui-carousel": "^2.2.6",
     "react-router-dom": "^5.2.0",
