--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react-material-ui-carousel": "^2.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-social-icons": "^5.5.0",
+    "react-social-media-icons": "^1.1.0",
+    "social-media-icons-react": "^1.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
