--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sdm",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/PoornimaShridhar/SMD",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -16,10 +17,12 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-google-font-loader": "^1.1.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
     "react-material-ui-carousel": "^2.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "react-social-icons": "^5.5.0",
     "react-social-media-icons": "^1.1.0",
     "social-media-icons-react": "^1.1.2",
@@ -29,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
