--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
+    "html-to-react": "^1.4.7",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
@@ -21,6 +23,7 @@
     "react-icons": "^4.2.0",
     "react-material-ui-carousel": "^2.2.6",
     "react-router-dom": "^5.2.0",
+    "react-rte": "^0.16.3",
     "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
     "react-social-icons": "^5.5.0",
