--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sdm",
-  "homepage": "https://github.com/PoornimaShridhar/SMD",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
