--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
+    "connected-react-router": "^6.9.1",
     "html-to-react": "^1.4.7",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
@@ -22,6 +23,7 @@
     "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
     "react-material-ui-carousel": "^2.2.6",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-rte": "^0.16.3",
     "react-scripts": "4.0.3",
