--- a/package.json
+++ b/package.json
@@ -15,11 +15,9 @@
     "bootstrap": "^4.6.0",
     "connected-react-router": "^6.9.1",
     "html-to-react": "^1.4.7",
-    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
-    "react-google-font-loader": "^1.1.0",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
     "react-material-ui-carousel": "^2.2.6",
@@ -29,12 +27,10 @@
     "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
     "react-social-icons": "^5.5.0",
-    "react-social-media-icons": "^1.1.0",
-    "social-media-icons-react": "^1.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
